Add CSS for organizers page.

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -468,6 +468,7 @@ body.admin-bar #tix,
 
 /* Speakers Page */
 
+.wcorg-organizer,
 .wcorg-speaker {
    border-bottom: $base__border;
    overflow: auto;
